--- a/TEST FUNCTION CARO.vcxproj
+++ b/TEST FUNCTION CARO.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="About.cpp" />
     <ClCompile Include="Bot.cpp" />
     <ClCompile Include="DrawTest.cpp" />
     <ClCompile Include="Draw.cpp" />
@@ -140,6 +141,7 @@
     <ClCompile Include="SoundManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="About.h" />
     <ClInclude Include="Bot.h" />
     <ClInclude Include="Draw.h" />
     <ClInclude Include="Game.h" />
@@ -153,6 +155,17 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Gamelist.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="8-bit-game-2-186976.mp3" />
+    <Media Include="8-bit-game-2-186976.wav" />
+    <Media Include="8bit-music-for-game-68698.mp3" />
+    <Media Include="8bit-music-for-game-68698.wav" />
+    <Media Include="Draw.wav" />
+    <Media Include="GameBGM.mp3" />
+    <Media Include="MenuMove.wav" />
+    <Media Include="MenuSelect.wav" />
+    <Media Include="Win.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
