--- a/TEST FUNCTION CARO.vcxproj
+++ b/TEST FUNCTION CARO.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="DrawTest.cpp" />
     <ClCompile Include="Draw.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GamePlay.cpp" />
     <ClCompile Include="Help.cpp" />
     <ClCompile Include="LanguageText.cpp" />
     <ClCompile Include="Main().cpp" />
@@ -139,12 +140,14 @@
     <ClCompile Include="SaveLoad.cpp" />
     <ClCompile Include="Setting.cpp" />
     <ClCompile Include="SoundManager.cpp" />
+    <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="About.h" />
     <ClInclude Include="Bot.h" />
     <ClInclude Include="Draw.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GamePlay.h" />
     <ClInclude Include="LanguageText.h" />
     <ClInclude Include="Setting.h" />
     <ClInclude Include="Help.h" />
@@ -152,6 +155,7 @@
     <ClInclude Include="SaveLoad.h" />
     <ClInclude Include="DrawTest.h" />
     <ClInclude Include="SoundManager.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Gamelist.txt" />
